--- a/index.html
+++ b/index.html
@@ -114,11 +114,15 @@
                     </select>
                 </div>
                 <div class="form-group">
-                    <h2 class="h-tertiary">Payment Method</h2><br>
-                    <label for="cash on delivery">Cash On Delivery</label><input type="radio" name="payment"
-                        id="cash on delivery">
-                    <br><label for="online payment">Online Payment</label><input type="radio" name="payment"
-                        id="online payment">
+                 <h2 class="h-tertiary">Payment Method</h2>
+<label>
+  <input type="radio" name="payment" value="cash"> Cash On Delivery
+</label>
+<br>
+<label>
+  <input type="radio" name="payment" value="online"> Online Payment
+</label>
+
                 </div>
             </form>
         </div>
