--- a/index.html
+++ b/index.html
@@ -102,8 +102,10 @@
                         class="type1">
                 </div>
                 <div class="form-group">
-                    <input type="checkbox" id="drink" name="drink">
-                    <label for="drink">Include Coldrink</label>
+                   
+                    <label>
+                        <input type="checkbox" id="drink" name="drink">Include Coldrink
+                    </label>
                     <br>(Extra Charges Included)
                 </div>
                 <div class="form-group">
