--- a/index.html
+++ b/index.html
@@ -102,12 +102,13 @@
                         class="type1">
                 </div>
                 <div class="form-group">
-                   
                     <label>
-                        <input type="checkbox" id="drink" name="drink">Include Coldrink
+                        <input type="checkbox" id="drink" name="drink">
+                        Include Coldrink
                     </label>
                     <br>(Extra Charges Included)
                 </div>
+
                 <div class="form-group">
                     <label for="message">Message</label>
                     <textarea id="message" name="message" placeholder="Specific Instructions Or Ingredints" cols="30"
