--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </ul>
     </nav>
     <section class="home">
-        <h1 class="h-primary">Welcome To MyOnilineFood</h1>
+        <h1 class="h-primary">Welcome To MyOnlineFood</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, dolore .</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
         <button class="btn">Order Now</button>
